# uaclientproxy

./: .gitignore  CMakeLists.txt  ConsoleApplication1.sln
ConsoleApplication1/: ConsoleApplication1.vcxproj  main.cpp
InoUAClientProxy/: CInoRedSession.cpp  CInoRedSession.h  CInoSession.cpp  CInoSession.h  CInoSessionCallback.cpp  CInoSessionCallback.h  CInoSessionConfig.cpp  CInoSessionConfig.h  CInoSessionGroup.cpp  CInoSessionGroup.h  CInoSubscription.cpp  CInoSubscription.h  CInoSubscriptionCallback.cpp  CInoSubscriptionCallback.h  CInoUAClient.cpp  CInoUAClient.h  CInoUAClientConfig.cpp  CInoUAClientConfig.h  CInoUAClientConnect.cpp  CInoUAClientConnect.h  CInoUAClientMgr.cpp  CInoUAClientMgr.h  CInoUAClientProxy.cpp  CInoUAClientProxy.h  CInoUAClientProxyMgr.cpp  CInoUAClientProxyMgr.h  CInoUAClientSubscription.cpp  CInoUAClientSubscription.h  CInoUARedClient.cpp  CInoUARedClient.h  CInoUASessionCallback.cpp  CInoUASessionCallback.h  CInoUASubscription.cpp  CInoUASubscription.h  CInoUASubscriptionCallback.cpp  CInoUASubscriptionCallback.h  CMakeLists.txt  InoExportDef.h  InoRedSession.cpp  InoRedSession.h  (+19 more)
InoUAClientProxy/include/uabasecpp/: abstractnodesetbrowseimport.h  abstractnodesetservices.h  basenodes.h  hashtable.h  nodesetxmlimport.h  opcuagds_identifiers.h  referencecounter.h  srvtrace.h  statuscode.h  uaabstractapplication.h  uaabstractdefinition.h  uaabstractencoder.h  uaabstractgenericvalue.h  uaaggregateconfiguration.h  uaannotation.h  uabase.h  uabinarydecoder.h  uabinaryencoder.h  uabsdreader.h  uabuildinfo.h  uacontentfilter.h  uacontentfilterresult.h  uadatavalue.h  uadatetime.h  uadeletenodesitem.h  uadictionarydata.h  uadir.h  uadoublecomplexnumbertype.h  uaendpointconfiguration.h  uaendpointurllistdatatype.h  uaenumvalue.h  uaeuinformation.h  uaeventfilter.h  uaextensionobject.h  uafileengine.h  uagenericunionvalue.h  uagenericvalue.h  uaguid.h  uahistoryevent.h  uahistoryeventfieldlist.h  (+36 more)
InoUAClientProxy/include/uabasecpp/arch/windows/: uaatomic.h
InoUAClientProxy/include/uaclientcpp/: libtrace.h  uacertificatedirectoryobject.h  uaclientsdk.h  uadiscovery.h  uasession.h  uasubscription.h  uatrustlistobject.h
InoUAClientProxy/include/uamodels/: opcuadi_blocktype.h  opcuadi_configurableobjecttype.h  opcuadi_configurableobjecttypebase.h  opcuadi_connectionpointtype.h  opcuadi_devicetype.h  opcuadi_devicetypebase.h  opcuadi_fetchresultdatadatatype.h  opcuadi_fetchresultdatatype.h  opcuadi_fetchresulterrordatatype.h  opcuadi_functionalgrouptypebase.h  opcuadi_identifiers.h  opcuadi_instancefactory_devices.h  opcuadi_lockingservicestype.h  opcuadi_networktype.h  opcuadi_networktypebase.h  opcuadi_nodemanagerdevices.h  opcuadi_nodemanagerdevicesbase.h  opcuadi_protocoltype.h  opcuadi_transferservicestype.h  opcuadi_transferservicestypebase.h  opcuadi_uielementtype.h  opcuaplc_ctrlconfigurationtype.h  opcuaplc_ctrlconfigurationtypebase.h  opcuaplc_ctrlprogramorganizationunittype.h  opcuaplc_ctrlprogramorganizationunittypebase.h  opcuaplc_ctrlprogramtypebase.h  opcuaplc_ctrlresourcetypebase.h  opcuaplc_ctrltasktypebase.h  opcuaplc_nodemanagerplcopen.h  opcuaplc_nodemanagerplcopenbase.h  opcuaplc_sfctype.h
InoUAClientProxy/include/uapkicpp/: certificatestoreconfiguration.h  uapkiconfig.h  uapkirsakeypair.h
InoUAClientProxy/include/uaservercpp/: aggregatecalculatoraverage.h  aggregatecalculatorminmax.h  aggregatecalculatorstddev.h  aggregators.h  continuationpoint.h  coremodule.h  coremoduleincludes.h  eventmanager.h  eventmanagerbase.h  eventmanagerhelper.h  historymanager.h  historymanagerbase.h  iomanager.h  iomanageruanode.h  methodhandleuanode.h  methodmanager.h  nodemanagerroot.h  opcua_acknowledgeableconditiontype.h  opcua_aggregateconfigurationtypebase.h  opcua_alarmconditiontype.h  opcua_alarmconditiontypebase.h  opcua_alarmgrouptype.h  opcua_arrayitemtype.h  opcua_audiovariabletype.h  opcua_auditeventtypedata.h  opcua_basedatavariabletype.h  opcua_baseeventtype.h  opcua_basemodelchangeeventtypedata.h  opcua_baseobjecttype.h  opcua_buildinfotype.h  opcua_certificateexpirationalarmtype.h  opcua_conditiontype.h  opcua_conditionvariabletype.h  opcua_dataitemtype.h  opcua_datatypedescriptiontype.h  opcua_datatypedictionarytype.h  opcua_datatypeencodingtype.h  opcua_datatypeencodingtypebase.h  opcua_discrepancyalarmtype.h  opcua_discretealarmtype.h  (+64 more)
InoUAClientProxy/include/uastack/: opcua_attributes.h  opcua_browsenames.h  opcua_buffer.h  opcua_config.h  opcua_connection.h  opcua_crypto.h  opcua_cryptofactory.h  opcua_datetime.h  opcua_decoder.h  opcua_identifiers.h  opcua_list.h  opcua_memorystream.h  opcua_messagecontext.h  opcua_p_compilerinfo.h  opcua_p_crypto.h  opcua_p_pki.h  opcua_pki.h  opcua_servicetable.h  opcua_simplebinarydecoder.h  opcua_simplebinaryencoder.h  opcua_stackstatuscodes.h  opcua_stream.h  opcua_stringtable.h
InoUAClientProxy/include/xmlparsercpp/: opcua_xml_parser.h
InoUAClientProxy/lib/x86/debug/: ACEd.lib  Commons.lib  HttpLibrary.lib  hv.lib  uabasecppd.lib  uaclientcppd.lib  xmlparsercppd.lib
InoUAClientProxy/lib/x86/release/: Commons.exp  Commons.lib  PluginManager.exp  PluginManager.lib
include/: CommonDef.h  InoCommonDef.h  ScopeExit.h
include/ua/uabasecpp/: abstractnodesetexport.h  abstractnodesetimport.h  nodeset.h  nodesetxmlexport.h  opcuagds_applicationrecorddatatype.h  opcuagds_datatypes.h  uaabstractdecoder.h  uaabstractdefinitionprivate.h  uaabstractdictionaryreader.h  uaabstractfileengine.h  uaabstractgenericstructurevalue.h  uaaddnodesitem.h  uaaddreferencesitem.h  uaapplication.h  uaapplicationdescription.h  uaargument.h  uaarraytemplates.h  uaatomic.h  uaaxisinformation.h  uabytearray.h  uabytestring.h  uachar.h  uacomplexnumbertype.h  uacontentfilterelementresult.h  uadatastream.h  uadatatypedefinition.h  uadeletereferencesitem.h  uadiagnosticinfos.h  uaencodertype.h  uaendpointdescription.h  uaendpointtype.h  uaenumdefinition.h  uaenumdefinitiondatatype.h  uaenumfield.h  uaenumvaluetype.h  uaeventfilterresult.h  uaexpandednodeid.h  uafile.h  uagenericoptionsetvalue.h  (+22 more)
(+145 files in other folders)
